# skill-tooling

./: .gitignore  README.md  SKILL.md  publish-config.json  pyproject.toml
.github/workflows/: validate.yml
docs/: CURRENT_STATE.md  DEPLOYMENT_MATRIX.md  GAPS.md  ROADMAP.md  TARGET_STATE.md  deployment-matrix.md  family-repo-contract.md  family-schema.md  llm-authoring-contract.md  project-state.md  status-and-plan.md  target-bundles.md
examples/: .env.example  publish-config.json
schemas/: family.schema.json  publish-config.schema.json  source-skill-frontmatter.schema.json
scripts/: create-family  rollback-deploy  skill-deploy  skill_tooling.py  validate-family
tests/: smoke.sh
