[project]
name = "skill-tooling"
version = "0.1.0"
description = "Central CLI tooling for scaffolding, validating, and deploying skill families across AI platforms"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Brian Raney" },
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
